# ComfyUI-IAT

./: .gitignore  CONTRIBUTING.md  LICENSE  OPTIMIZATION_SUMMARY.md  README.md  UPDATE.md  __init__.py  config.yaml  install.bat  install.py  install.sh  pyproject.toml  readme.md  requirements.txt
.github/: pull_request_template.md  release-v2.0.0.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/skills/: qwen35-models.md
.github/workflows/: ci.yml  release.yml
.history/nodes/: input_output_nodes_20251029141748.py
datasets/prompts_kb/: README.md  example_dataset.json
docs/: INSTALL.md  TROUBLESHOOTING.md  USAGE.md
examples/: README.md  workflow_color_palette_extractor.json  workflow_prompt_enhancement.json  workflow_reverse_prompt.json  workflow_translation_enhancement.json
js/: gpt_reverse_prompt.js  node_id_editor.js
nodes/: image_nodes.py  input_nodes.py  input_output_nodes.py  llm_nodes.py
py/: __init__.py
py/nodes/: __init__.py  audio_nodes.py  color_palette_nodes.py  dataset_repository.py  image_nodes.py  input_output_nodes.py  llm_backends.py  llm_nodes.py  prompt_kb.py  qwen35_dataset_rag_nodes.py  qwen35_nodes.py  qwen35_runtime.py
tests/: test_dataset_refactor.py
